updated figure width to fix alignment if img

--- a/Desktop/My-First-FES-Project/style.css
+++ b/Desktop/My-First-FES-Project/style.css
@@ -104,7 +104,7 @@ h2 {
 }
 
 .about__img--wrapper {
-    width: 40px;
+    width: 40%;
     
 }
 
